--- a/packages/reactui/package.json
+++ b/packages/reactui/package.json
@@ -23,43 +23,44 @@
   "author": "Prashan Pudasaini",
   "license": "MIT",
   "files": [
+    ".npmignore",
     "dist",
     "LICENSE",
     "README.md"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/react": "^18.0.27",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "babel-loader": "^9.1.2",
-    "css-loader": "^6.7.3",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/react": "^18.2.48",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.9.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "node-style-loader": "^0.0.1-alpha",
-    "prettier": "^2.8.3",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.4.2",
+    "prettier": "^2.8.8",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.2"
   },
   "dependencies": {
-    "acorn": "^8.8.2",
-    "acorn-import-assertions": "^1.8.0",
+    "acorn": "^8.11.3",
+    "acorn-import-assertions": "^1.9.0",
     "acorn-jsx": "^5.3.2",
     "ajv": "^6.12.6",
     "ajv-formats": "^2.1.1",
@@ -68,10 +69,10 @@
     "ansi-styles": "^3.2.1",
     "anymatch": "^3.1.3",
     "argparse": "^2.0.1",
-    "array-includes": "^3.1.6",
+    "array-includes": "^3.1.7",
     "array-union": "^2.1.0",
-    "array.prototype.flatmap": "^1.3.1",
-    "array.prototype.tosorted": "^1.1.1",
+    "array.prototype.flatmap": "^1.3.2",
+    "array.prototype.tosorted": "^1.1.2",
     "available-typed-arrays": "^1.0.5",
     "babel-plugin-polyfill-corejs2": "^0.3.3",
     "babel-plugin-polyfill-corejs3": "^0.6.0",
@@ -81,73 +82,73 @@
     "binary-extensions": "^2.2.0",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
-    "browserslist": "^4.21.5",
+    "browserslist": "^4.22.2",
     "buffer-from": "^1.1.2",
-    "call-bind": "^1.0.2",
+    "call-bind": "^1.0.5",
     "callsites": "^3.1.0",
-    "caniuse-lite": "^1.0.30001451",
+    "caniuse-lite": "^1.0.30001576",
     "chalk": "^2.4.2",
     "chokidar": "^3.5.3",
     "chrome-trace-event": "^1.0.3",
     "clone-deep": "^4.0.1",
     "color-convert": "^1.9.3",
-    "color-name": "^1.1.3",
-    "colorette": "^2.0.19",
+    "color-name": "^1.1.4",
+    "colorette": "^2.0.20",
     "commander": "^4.1.1",
     "commondir": "^1.0.1",
     "concat-map": "^0.0.1",
     "convert-source-map": "^1.9.0",
-    "core-js-compat": "^3.27.2",
+    "core-js-compat": "^3.35.0",
     "cross-spawn": "^7.0.3",
     "cssesc": "^3.0.0",
-    "csstype": "^3.1.1",
+    "csstype": "^3.1.3",
     "debug": "^4.3.4",
     "deep-is": "^0.1.4",
-    "define-properties": "^1.1.4",
+    "define-properties": "^1.2.1",
     "dir-glob": "^3.0.1",
     "doctrine": "^3.0.0",
-    "electron-to-chromium": "^1.4.293",
+    "electron-to-chromium": "^1.4.630",
     "emojis-list": "^2.1.0",
-    "enhanced-resolve": "^5.12.0",
-    "envinfo": "^7.8.1",
-    "es-abstract": "^1.21.1",
+    "enhanced-resolve": "^5.15.0",
+    "envinfo": "^7.11.0",
+    "es-abstract": "^1.22.3",
     "es-module-lexer": "^0.9.3",
-    "es-set-tostringtag": "^2.0.1",
-    "es-shim-unscopables": "^1.0.0",
+    "es-set-tostringtag": "^2.0.2",
+    "es-shim-unscopables": "^1.0.2",
     "es-to-primitive": "^1.2.1",
     "escalade": "^3.1.1",
     "escape-string-regexp": "^1.0.5",
     "eslint-scope": "^5.1.1",
     "eslint-utils": "^3.0.0",
-    "eslint-visitor-keys": "^3.3.0",
-    "espree": "^9.4.1",
-    "esquery": "^1.4.0",
+    "eslint-visitor-keys": "^3.4.3",
+    "espree": "^9.6.1",
+    "esquery": "^1.5.0",
     "esrecurse": "^4.3.0",
     "estraverse": "^5.3.0",
     "esutils": "^2.0.3",
     "events": "^3.3.0",
     "fast-deep-equal": "^3.1.3",
-    "fast-diff": "^1.2.0",
-    "fast-glob": "^3.2.12",
+    "fast-diff": "^1.3.0",
+    "fast-glob": "^3.3.2",
     "fast-json-stable-stringify": "^2.1.0",
     "fast-levenshtein": "^2.0.6",
     "fastest-levenshtein": "^1.0.16",
-    "fastq": "^1.15.0",
+    "fastq": "^1.16.0",
     "file-entry-cache": "^6.0.1",
     "fill-range": "^7.0.1",
     "find-cache-dir": "^3.3.2",
     "find-up": "^5.0.0",
-    "flat-cache": "^3.0.4",
-    "flatted": "^3.2.7",
+    "flat-cache": "^3.2.0",
+    "flatted": "^3.2.9",
     "for-each": "^0.3.3",
     "fs-readdir-recursive": "^1.1.0",
     "fs.realpath": "^1.0.0",
-    "fsevents": "^2.3.2",
-    "function-bind": "^1.1.1",
-    "function.prototype.name": "^1.1.5",
+    "fsevents": "^2.3.3",
+    "function-bind": "^1.1.2",
+    "function.prototype.name": "^1.1.6",
     "functions-have-names": "^1.2.3",
     "gensync": "^1.0.0-beta.2",
-    "get-intrinsic": "^1.2.0",
+    "get-intrinsic": "^1.2.2",
     "get-symbol-description": "^1.0.0",
     "glob": "^7.2.3",
     "glob-parent": "^5.1.2",
@@ -156,30 +157,30 @@
     "globalthis": "^1.0.3",
     "globby": "^11.1.0",
     "gopd": "^1.0.1",
-    "graceful-fs": "^4.2.10",
+    "graceful-fs": "^4.2.11",
     "grapheme-splitter": "^1.0.4",
-    "has": "^1.0.3",
+    "has": "^1.0.4",
     "has-bigints": "^1.0.2",
     "has-flag": "^3.0.0",
-    "has-property-descriptors": "^1.0.0",
+    "has-property-descriptors": "^1.0.1",
     "has-proto": "^1.0.1",
     "has-symbols": "^1.0.3",
     "has-tostringtag": "^1.0.0",
     "icss-utils": "^5.1.0",
-    "ignore": "^5.2.4",
+    "ignore": "^5.3.0",
     "import-fresh": "^3.3.0",
     "import-local": "^3.1.0",
     "imurmurhash": "^0.1.4",
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
-    "internal-slot": "^1.0.5",
+    "internal-slot": "^1.0.6",
     "interpret": "^3.1.1",
-    "is-array-buffer": "^3.0.1",
+    "is-array-buffer": "^3.0.2",
     "is-bigint": "^1.0.4",
     "is-binary-path": "^2.1.0",
     "is-boolean-object": "^1.1.2",
     "is-callable": "^1.2.7",
-    "is-core-module": "^2.11.0",
+    "is-core-module": "^2.13.1",
     "is-date-object": "^1.0.5",
     "is-extglob": "^2.1.1",
     "is-glob": "^4.0.3",
@@ -192,12 +193,12 @@
     "is-shared-array-buffer": "^1.0.2",
     "is-string": "^1.0.7",
     "is-symbol": "^1.0.4",
-    "is-typed-array": "^1.1.10",
+    "is-typed-array": "^1.1.12",
     "is-weakref": "^1.0.2",
     "isexe": "^2.0.0",
     "isobject": "^3.0.1",
     "jest-worker": "^27.5.1",
-    "js-sdsl": "^4.3.0",
+    "js-sdsl": "^4.4.2",
     "js-tokens": "^4.0.0",
     "js-yaml": "^4.1.0",
     "jsesc": "^2.5.2",
@@ -205,7 +206,7 @@
     "json-schema-traverse": "^0.4.1",
     "json-stable-stringify-without-jsonify": "^1.0.1",
     "json5": "^2.2.3",
-    "jsx-ast-utils": "^3.3.3",
+    "jsx-ast-utils": "^3.3.5",
     "kind-of": "^6.0.3",
     "levn": "^0.4.1",
     "loader-runner": "^4.3.0",
@@ -222,23 +223,23 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "minimatch": "^3.1.2",
-    "ms": "^2.1.2",
-    "nanoid": "^3.3.4",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.7",
     "natural-compare": "^1.4.0",
     "natural-compare-lite": "^1.4.0",
     "neo-async": "^2.6.2",
-    "node-releases": "^2.0.10",
+    "node-releases": "^2.0.14",
     "normalize-path": "^3.0.0",
     "object-assign": "^4.1.1",
-    "object-inspect": "^1.12.3",
+    "object-inspect": "^1.13.1",
     "object-keys": "^1.1.1",
-    "object.assign": "^4.1.4",
-    "object.entries": "^1.1.6",
-    "object.fromentries": "^2.0.6",
-    "object.hasown": "^1.1.2",
-    "object.values": "^1.1.6",
+    "object.assign": "^4.1.5",
+    "object.entries": "^1.1.7",
+    "object.fromentries": "^2.0.7",
+    "object.hasown": "^1.1.3",
+    "object.values": "^1.1.7",
     "once": "^1.4.0",
-    "optionator": "^0.9.1",
+    "optionator": "^0.9.3",
     "p-limit": "^3.1.0",
     "p-locate": "^5.0.0",
     "p-try": "^2.2.0",
@@ -252,46 +253,46 @@
     "picomatch": "^2.3.1",
     "pify": "^4.0.1",
     "pkg-dir": "^4.2.0",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.33",
     "postcss-modules-extract-imports": "^3.0.0",
-    "postcss-modules-local-by-default": "^4.0.0",
-    "postcss-modules-scope": "^3.0.0",
+    "postcss-modules-local-by-default": "^4.0.3",
+    "postcss-modules-scope": "^3.1.0",
     "postcss-modules-values": "^4.0.0",
-    "postcss-selector-parser": "^6.0.11",
+    "postcss-selector-parser": "^6.0.15",
     "postcss-value-parser": "^4.2.0",
     "prelude-ls": "^1.2.1",
     "prettier-linter-helpers": "^1.0.0",
     "prop-types": "^15.8.1",
-    "punycode": "^2.3.0",
+    "punycode": "^2.3.1",
     "queue-microtask": "^1.2.3",
     "randombytes": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.21.1",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.21.2",
     "readdirp": "^3.6.0",
     "rechoir": "^0.8.0",
     "regenerate": "^1.4.2",
-    "regenerate-unicode-properties": "^10.1.0",
+    "regenerate-unicode-properties": "^10.1.1",
     "regenerator-runtime": "^0.13.11",
-    "regenerator-transform": "^0.15.1",
-    "regexp.prototype.flags": "^1.4.3",
+    "regenerator-transform": "^0.15.2",
+    "regexp.prototype.flags": "^1.5.1",
     "regexpp": "^3.2.0",
-    "regexpu-core": "^5.3.0",
+    "regexpu-core": "^5.3.2",
     "regjsparser": "^0.9.1",
     "require-from-string": "^2.0.2",
-    "resolve": "^1.22.1",
+    "resolve": "^1.22.8",
     "resolve-cwd": "^3.0.0",
     "resolve-from": "^4.0.0",
     "reusify": "^1.0.4",
     "rimraf": "^3.0.2",
     "run-parallel": "^1.2.0",
     "safe-buffer": "^5.2.1",
-    "safe-regex-test": "^1.0.0",
+    "safe-regex-test": "^1.0.2",
     "scheduler": "^0.23.0",
-    "schema-utils": "^4.0.0",
-    "semver": "^6.3.0",
-    "serialize-javascript": "^6.0.1",
+    "schema-utils": "^4.2.0",
+    "semver": "^6.3.1",
+    "serialize-javascript": "^6.0.2",
     "shallow-clone": "^3.0.1",
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
@@ -300,16 +301,16 @@
     "source-map": "^0.6.1",
     "source-map-js": "^1.0.2",
     "source-map-support": "^0.5.21",
-    "string.prototype.matchall": "^4.0.8",
-    "string.prototype.trimend": "^1.0.6",
-    "string.prototype.trimstart": "^1.0.6",
+    "string.prototype.matchall": "^4.0.10",
+    "string.prototype.trimend": "^1.0.7",
+    "string.prototype.trimstart": "^1.0.7",
     "strip-ansi": "^6.0.1",
     "strip-json-comments": "^3.1.1",
     "supports-color": "^5.5.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
     "tapable": "^2.2.1",
-    "terser": "^5.16.3",
-    "terser-webpack-plugin": "^5.3.6",
+    "terser": "^5.26.0",
+    "terser-webpack-plugin": "^5.3.10",
     "text-table": "^0.2.0",
     "to-fast-properties": "^2.0.0",
     "to-regex-range": "^5.0.1",
@@ -323,17 +324,17 @@
     "unicode-match-property-ecmascript": "^2.0.0",
     "unicode-match-property-value-ecmascript": "^2.1.0",
     "unicode-property-aliases-ecmascript": "^2.1.0",
-    "update-browserslist-db": "^1.0.10",
+    "update-browserslist-db": "^1.0.13",
     "uri-js": "^4.4.1",
     "util-deprecate": "^1.0.2",
     "watchpack": "^2.4.0",
-    "webpack-merge": "^5.8.0",
+    "webpack-merge": "^5.10.0",
     "webpack-sources": "^3.2.3",
     "which": "^2.0.2",
     "which-boxed-primitive": "^1.0.2",
-    "which-typed-array": "^1.1.9",
-    "wildcard": "^2.0.0",
-    "word-wrap": "^1.2.3",
+    "which-typed-array": "^1.1.13",
+    "wildcard": "^2.0.1",
+    "word-wrap": "^1.2.5",
     "wrappy": "^1.0.2",
     "yallist": "^3.1.1",
     "yocto-queue": "^0.1.0"
