--- a/packages/reactui/package.json
+++ b/packages/reactui/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@fullstackcoder/reactui",
-  "version": "1.1.0",
+  "version": "1.1.4",
   "description": "Production-ready React components",
   "main": "./dist/cjs/cjs_bundle.js",
   "module": "./dist/esm/esm_bundle.js",
-  "types": "./dist/esm/index.d.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --watch",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
     "prettier": "prettier --write \"{src,tests}/**/*.{js,ts,jsx,tsx}\"",
     "prepare": "npm run build",
@@ -39,6 +39,7 @@
     "@typescript-eslint/parser": "^6.18.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.9.0",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -48,6 +49,7 @@
     "node-style-loader": "^0.0.1-alpha",
     "prettier": "^2.8.8",
     "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
